# cubeBot

./: LICENSE  README.md  README_cubebot.md
cubebot/: package.xml  setup.cfg  setup.py
cubebot/cubebot/: __init__.py  obstacle_avoider.py  random_policy.py  reward_logger.py  rl_loop.py  scan_logger.py
cubebot/launch/: cubebot_sim.launch.py  random_with_logging.launch.py
cubebot/resource/: cubebot
cubebot/rl_runs/: episodes.csv  steps.csv
cubebot/urdf/: cubecar.urdf.xacro
cubebot/worlds/: flat.world
